--- a/app/src/main/res/layout/content_edit_profile.xml
+++ b/app/src/main/res/layout/content_edit_profile.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/imageCrop"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/photo_crop" />
+                android:src="@drawable/photo_crop2" />
 
 
         </FrameLayout>
@@ -65,7 +65,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
-                android:hint="Ken Girisya" />
+                android:hint="Fullname"
+                android:text="Ken Girisya"/>
         </android.support.design.widget.TextInputLayout>
 
 
@@ -82,7 +83,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
-                android:hint="12/12/1980" />
+                android:hint="Date Of Birth"
+                android:text="12/12/1980" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Gender Label -->
