--- a/app/src/main/res/layout/content_exchange.xml
+++ b/app/src/main/res/layout/content_exchange.xml
@@ -4,6 +4,7 @@
     android:id="@+id/content_main"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_marginTop="20dp"
     android:fitsSystemWindows="true">
 
 
