--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,14 +9,14 @@
             android:layout_height="fill_parent"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="55dp"
+            android:layout_marginTop="20dp"
             android:orientation="vertical" >
 
             <!-- Card -->
 
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="150dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
@@ -99,19 +99,11 @@
                         android:layout_height="wrap_content">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
-                        android:text="1 /"
+                        android:text="1 / 12"
                         android:gravity="left"
-                        android:textSize="30dip"/>
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
-                        android:text="12"
-                        android:gravity="right"
                         android:textSize="30dip"/>
 
                     </RelativeLayout>
