--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
+            android:padding="10dp"
             android:layout_marginBottom="10dp">
             <EditText android:id="@+id/input_password"
                 android:drawableLeft="@mipmap/ic_https_black_36dp"
