--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,7 +13,17 @@
             android:orientation="vertical" >
 
             <!-- Card -->
-
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardMain"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
+                card_view:cardCornerRadius="50dp"
+                card_view:cardElevation="6dp"
+                card_view:cardUseCompatPadding="true"
+                card_view:contentPadding="10dp"
+                >
 
             <ImageView
                 android:layout_width="fill_parent"
@@ -61,6 +71,7 @@
                     android:layout_centerHorizontal="true"
                     android:fontFamily="times new roman" />
 
+            </android.support.v7.widget.CardView>
 
             <RelativeLayout
                 android:id="@+id/RelativeLayout01"
@@ -71,8 +82,18 @@
                 android:layout_height="wrap_content">
 
                 <!-- stamps box -->
-                <RelativeLayout
+                <android.support.v7.widget.CardView
                     android:id="@+id/well_stamp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginRight="0dp"
+                    card_view:cardCornerRadius="50dp"
+                    card_view:cardElevation="6dp"
+                    card_view:cardUseCompatPadding="true"
+                    card_view:contentPadding="10dp"
+                    >
+                <RelativeLayout
                     android:background="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -110,13 +131,24 @@
                     </RelativeLayout>
 
                 </RelativeLayout>
+                </android.support.v7.widget.CardView>
 
                 <!-- points box -->
-                <RelativeLayout
+                <android.support.v7.widget.CardView
                     android:layout_toRightOf="@+id/well_stamp"
                     android:id="@+id/well_point"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginRight="0dp"
+                    card_view:cardCornerRadius="50dp"
+                    card_view:cardElevation="6dp"
+                    card_view:cardUseCompatPadding="true"
+                    card_view:contentPadding="10dp"
+                    >
+                <RelativeLayout
                     android:background="@color/white"
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
@@ -144,6 +176,7 @@
                         android:textSize="30dip"/>
 
                 </RelativeLayout>
+                </android.support.v7.widget.CardView>
 
             </RelativeLayout>
 
