--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -152,14 +152,14 @@
             android:layout_marginBottom="10dp">
 
             <TextView android:id="@+id/terms"
-                android:layout_width="250dp"
+                android:layout_width="210dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="0dp"
                 android:text="I agree with the membership usage terms and conditions"
                 android:layout_gravity="left"
                 android:gravity="left"
                 android:layout_alignParentLeft="true"
-                android:textSize="18dip"/>
+                android:textSize="16dip"/>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="100dp"
@@ -192,10 +192,11 @@
         <TextView android:id="@+id/link_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="10dp"
+            android:padding="10dp"
             android:text="Already a member? Login"
             android:gravity="center"
-            android:textSize="16dip"/>
+            android:textSize="18dip"/>
 
     </LinearLayout>
 </ScrollView>
