--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -40,14 +40,14 @@
                 <TextView android:id="@+id/textView1"
                     android:background="@color/primary_darker"
                     android:layout_marginTop="150dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="Ken Girisya"
-                    android:textSize="25dp"
+                    android:textSize="20dp"
                     android:textStyle="bold"
                     android:gravity="left"
                     android:paddingBottom="10dp"
-                    android:paddingTop="20dp"
+                    android:paddingTop="10dp"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
                     android:textColor="@color/colorPrimary"
@@ -56,14 +56,15 @@
                 <TextView
                     android:id="@+id/textView2"
                     android:background="@color/primary_darker"
-                    android:layout_marginTop="208dp"
-                    android:layout_width="match_parent"
+                    android:layout_marginTop="190dp"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="090 876 241"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     android:textStyle="bold"
                     android:gravity="left"
-                    android:paddingBottom="20dp"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
                     android:layout_marginBottom="0dp"
@@ -74,26 +75,17 @@
             </android.support.v7.widget.CardView>
 
             <RelativeLayout
-                android:id="@+id/RelativeLayout01"
-                android:layout_marginTop="270dp"
+                android:layout_below="@+id/cardMain"
+                android:id="@+id/stamp_and_point"
+                android:layout_marginTop="10dp"
                 android:paddingLeft="0dp"
                 android:paddingRight="0dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <!-- stamps box -->
-                <android.support.v7.widget.CardView
-                    android:id="@+id/well_stamp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="0dp"
-                    android:layout_marginRight="0dp"
-                    card_view:cardCornerRadius="50dp"
-                    card_view:cardElevation="6dp"
-                    card_view:cardUseCompatPadding="true"
-                    card_view:contentPadding="10dp"
-                    >
                 <RelativeLayout
+                    android:id="@+id/well_stamp"
                     android:background="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -126,27 +118,16 @@
                         android:layout_marginTop="30dp"
                         android:text="1 / 12"
                         android:gravity="left"
-                        android:textSize="30dip"/>
+                        android:textSize="20dip"/>
 
                     </RelativeLayout>
 
                 </RelativeLayout>
-                </android.support.v7.widget.CardView>
 
                 <!-- points box -->
-                <android.support.v7.widget.CardView
+                <RelativeLayout
                     android:layout_toRightOf="@+id/well_stamp"
                     android:id="@+id/well_point"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="0dp"
-                    android:layout_marginRight="0dp"
-                    card_view:cardCornerRadius="50dp"
-                    card_view:cardElevation="6dp"
-                    card_view:cardUseCompatPadding="true"
-                    card_view:contentPadding="10dp"
-                    >
-                <RelativeLayout
                     android:background="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -171,12 +152,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
-                        android:text="10000"
+                        android:text="100000"
                         android:gravity="center"
-                        android:textSize="30dip"/>
+                        android:textSize="20dip"/>
 
                 </RelativeLayout>
-                </android.support.v7.widget.CardView>
 
             </RelativeLayout>
 
