--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true">
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/content_main"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -19,10 +19,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:layout_marginRight="0dp"
-                card_view:cardCornerRadius="50dp"
-                card_view:cardElevation="6dp"
+                card_view:cardCornerRadius="0dp"
+                card_view:cardElevation="3dp"
                 card_view:cardUseCompatPadding="true"
-                card_view:contentPadding="10dp"
+                card_view:contentPadding="0dp"
                 >
 
             <ImageView
@@ -80,25 +80,38 @@
                 android:layout_marginTop="10dp"
                 android:paddingLeft="0dp"
                 android:paddingRight="0dp"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
 
                 <!-- stamps box -->
+
                 <RelativeLayout
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/well_stamp"
-                    android:background="@color/white"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:gravity="center"
-                    android:padding="30dp">
+                    android:padding="0dp"
+                    >
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cardMainWell"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginRight="0dp"
+                        card_view:cardBackgroundColor="@color/white"
+                        card_view:cardCornerRadius="0dp"
+                        card_view:cardElevation="3dp"
+                        card_view:cardUseCompactPadding="true"
+                        card_view:contentPadding="20dp"
+                        >
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="0dp"
+                        android:layout_marginBottom="10dp"
                         android:text="Stamps"
                         android:gravity="center"
                         android:layout_gravity="center"
@@ -106,59 +119,66 @@
                         android:textStyle="bold"
                         android:textSize="22dp"/>
 
-                    <RelativeLayout
-                        android:layout_width="80dp"
-                        android:gravity="center"
-                        android:layout_height="wrap_content">
-
                     <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="40dp"
                         android:text="1 / 12"
-                        android:gravity="left"
+                        android:gravity="center"
                         android:textSize="20dip"/>
 
-                    </RelativeLayout>
+                    </android.support.v7.widget.CardView>
 
                 </RelativeLayout>
 
                 <!-- points box -->
                 <RelativeLayout
-                    android:layout_toRightOf="@+id/well_stamp"
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:layout_below="@+id/well_stamp"
                     android:id="@+id/well_point"
-                    android:background="@color/white"
-                    android:layout_width="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
                     android:gravity="center"
-                    android:padding="30dp">
+                    android:padding="0dp">
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cardMainPoint"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginRight="0dp"
+                        card_view:cardBackgroundColor="@color/white"
+                        card_view:cardCornerRadius="0dp"
+                        card_view:cardElevation="3dp"
+                        card_view:cardUseCompactPadding="true"
+                        card_view:contentPadding="20dp"
+                        >
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="10dp"
+                            android:text="Points"
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            android:fontFamily="times new roman"
+                            android:textStyle="bold"
+                            android:textSize="22dp"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="0dp"
-                        android:text="Points"
-                        android:gravity="center"
-                        android:fontFamily="times new roman"
-                        android:textStyle="bold"
-                        android:textSize="22dp"/>
-
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="40dp"
                         android:text="100000"
                         android:gravity="center"
                         android:textSize="20dip"/>
 
+                    </android.support.v7.widget.CardView>
+
                 </RelativeLayout>
 
-            </RelativeLayout>
+            </RelativeLayout><!-- relative to stamp & point -->
 
             <!-- slideshow promo banner -->
 
