--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -110,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="10dp">
-            <EditText android:id="@+id/input_password"
+            <EditText android:id="@+id/input_password_retype"
                 android:drawableLeft="@mipmap/ic_https_black_36dp"
                 android:drawablePadding="10dp"
                 android:minHeight="60dp"
