--- a/app/src/main/res/layout/content_store_validation.xml
+++ b/app/src/main/res/layout/content_store_validation.xml
@@ -54,7 +54,7 @@
             android:gravity="center"
             android:textSize="22dp"/>
         <TextView
-            android:id="@+id/fullname"
+            android:id="@+id/id_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
